[gd_scene load_steps=6 format=2]

[ext_resource path="res://Moon/Moon.png" type="Texture" id=1]
[ext_resource path="res://Moon/Moon.gd" type="Script" id=2]
[ext_resource path="res://Moon/TorchLight.png" type="Texture" id=3]
[ext_resource path="res://Moon/Land_moon.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 17.1237

[node name="Moon" type="Area2D"]
z_index = -1
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -7.37271, -1.92331 )
texture = ExtResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 24.0
pitch_scale = 0.5
[connection signal="body_entered" from="." to="." method="_on_Moon_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Moon_body_exited"]
